# opencode-harness

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  och.config.example.toml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  model-evals.example.yml  pages.yml  release.yml
benchmarks/real-provider-comparison/: README.md  provider-comparison.json  provider-comparison.md
benchmarks/v0.1-mock-smoke/: README.md  report.json  report.md
docs/: architecture.md  deepseek-failure-mode-diagnosis.md  github-readiness.md  interview-guide.md  launch-kit.md  launch-readiness.md  presentation-guide.md  product-hunt-final-package.md  product-positioning.md  promo-video-script.md  provider-benchmarks.md  release.md  resume-positioning.md  video-captions.srt  video-production-kit.md  website-deployment.md  zh-intro.md
examples/: demo-workflow.md  mock-suite.json
examples/providers/: claude.toml  deepseek-reasoner.toml  deepseek.toml  local-openai-compatible.toml  openai.toml  qwen.toml
examples/release-demo/: README.md  manifest.json
media/demo-video/: README.md
model-labs/claude/: README.md  claude-coding-agent-suite.json  mock-smoke-suite.json  provider-matrix.md
model-labs/deepseek/: README.md  deepseek-v4-long-context-suite.json  deepseek-v4-repair-suite.json  deepseek-v4-suite.json  mock-smoke-suite.json  provider-matrix.md
model-labs/local/: README.md  local-coding-agent-suite.json  mock-smoke-suite.json  provider-matrix.md
model-labs/openai/: README.md  mock-smoke-suite.json  openai-coding-agent-suite.json  (+1 more)
scripts/: recording-demo.ps1  render-demo-video.py  run-deepseek-benchmark.ps1  run-deepseek-reliability-iteration.ps1  run-real-provider-benchmark.ps1
site/: README.md  deepseek-case-study.html  index.html  styles.css
tests/: test_agent.py  test_cli.py  test_config.py  test_dashboard.py  test_diagnosis.py  test_eval.py  test_labs.py  test_mcp_client.py  test_mcp_runtime.py  test_models.py  test_permissions.py  test_providers.py  test_replay.py  test_repo_map.py  test_session.py  test_tool_schemas.py  test_tools.py  test_viewer.py
(+56 files in other folders)
