[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opencode-harness"
version = "0.1.0"
description = "A clean-room, model-agnostic harness for Claude Code-class coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenCode Harness Contributors" }
]
keywords = [
  "agent",
  "coding-agent",
  "harness",
  "deepseek",
  "qwen",
  "claude",
  "openai",
  "mcp",
  "eval"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities"
]
dependencies = []

[project.urls]
Homepage = "https://samarailly51-pixel.github.io/opencode-harness/"
Repository = "https://github.com/samarailly51-pixel/opencode-harness"
Issues = "https://github.com/samarailly51-pixel/opencode-harness/issues"
CI = "https://github.com/samarailly51-pixel/opencode-harness/actions"

[project.scripts]
och = "opencode_harness.cli:main"
opencode-harness = "opencode_harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
